section our-team responsive done, fixed horizontal scroll 576 media screen

--- a/dev/static/styles/media.scss
+++ b/dev/static/styles/media.scss
@@ -63,6 +63,43 @@
       line-height: 22px;
     }
   }
+
+  .our-team {
+    &__text {
+      font-size: 27px;
+      line-height: 35px;
+      letter-spacing: 2.1px;
+
+      &:first-child {
+        margin-bottom: 35px;
+      }
+    }
+
+    &__btn {
+      display: block;
+      max-width: 374px;
+      margin: 20px auto 0;
+    }
+
+    &__contacts {
+      margin: 25px 0;
+
+      &-name,
+      &-link {
+        font-size: 14px;
+        line-height: 16px;
+      }
+
+      &-name {
+
+        letter-spacing: 2.79px;
+      }
+
+      &-link {
+        letter-spacing: 2.09px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 992px) {
@@ -130,6 +167,24 @@
   .products {
     &__descr {
       font-size: 12px;
+    }
+  }
+
+  .our-team {
+    &__contacts {
+      flex-wrap: wrap;
+      justify-content: center;
+
+      &-person {
+        width: 31%;
+        margin-bottom: 20px;
+      }
+
+      &-name,
+      &-link {
+        font-size: 16px;
+        line-height: 18px;
+      }
     }
   }
 }
@@ -237,6 +292,13 @@
       letter-spacing: 1.47px;
     }
   }
+
+  .our-team {
+    &__text {
+      font-size: 20px;
+      line-height: 26px;
+    }
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -252,6 +314,7 @@
     padding: 0 0 30px;
     margin-bottom: 25px;
     position: relative;
+    overflow-x: hidden;
 
     &::after {
       content: '';
@@ -306,6 +369,42 @@
       font-size: 15px;
     }
   }
+
+  .our-team {
+    &__contacts {
+      display: block;
+
+      &-person {
+        margin: 0 0 15px 0;
+        padding: 0;
+        width: auto;
+        display: flex;
+        align-items: center;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+
+      &-info {
+        margin: 0 auto;
+      }
+
+      &-name,
+      &-link {
+        font-size: 24px;
+        line-height: 30px;
+      }
+
+      &-name {
+        letter-spacing: 3.02px;
+      }
+
+      &-link {
+        letter-spacing: 2.26px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -344,6 +443,26 @@
       margin: 0 auto 15px;
     }
   }
+
+  .our-team {
+    &__btn {
+      font-size: 20px;
+    }
+
+    &__contacts {
+
+      &-card {
+        margin-right: 5px;
+        width: 40%;
+      }
+
+      &-name,
+      &-link {
+        font-size: 16px;
+        line-height: 20px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 360px) {
@@ -351,6 +470,20 @@
     &__title {
       font-size: 22px;
       letter-spacing: 1.96px;
+    }
+  }
+
+  .our-team {
+    &__btn {
+      font-size: 18px;
+      line-height: 18px;
+    }
+
+    &__contacts {
+      &-btn {
+        right: -15px;
+        bottom: -10px;
+      }
     }
   }
 }
