--- a/dev/static/styles/sections/our-team.scss
+++ b/dev/static/styles/sections/our-team.scss
@@ -1,5 +1,5 @@
 .our-team {
-  padding: 60px 0;
+  padding: 40px 0 60px;
   background-color: $section-color;
   color: #1f1f1f;
   text-align: center;
@@ -17,10 +17,29 @@
 
   &__contacts {
     margin: 40px 0 60px;
+    display: flex;
+    justify-content: space-between;
+
+    &-person {
+      padding: 5px;
+      width: 19%;
+
+      &:hover {
+
+        .our-team__contacts-btn,
+        .our-team__contacts-icon {
+          transform: scale(1);
+        }
+      }
+    }
 
     &-card {
       position: relative;
       margin-bottom: 5px;
+
+      img {
+        max-width: 100%;
+      }
     }
 
     &-btn {
@@ -29,17 +48,33 @@
       bottom: 0;
       width: 60px;
       height: 60px;
+      line-height: 50px;
       border: 4px solid #ffffff;
       border-radius: 50%;
       background-color: #1ead23;
+      transform: scale(.5);
+      transition: transform .2s;
+    }
+
+    &-icon {
+      transform: scale(0);
+      transition: transform ease .7s;
+    }
+
+    &-name {
+      letter-spacing: 2.7px;
+    }
+
+    &-link {
+      letter-spacing: 2.02px;
     }
 
     &-name,
     &-link {
+      white-space: nowrap;
       font-size: 21px;
       font-weight: 400;
       line-height: 25px;
-      letter-spacing: 2.7px;
     }
 
     &-link {
@@ -49,6 +84,7 @@
   }
 
   &__btn {
+    margin-top: 20px;
     padding: 16px 20px 20px;
     display: inline-block;
     text-transform: uppercase;
@@ -58,10 +94,7 @@
     line-height: 26px;
     letter-spacing: 2.08px;
     background: url('../images/general/shop-btn_bg.png') no-repeat;
+    background-size: 100%;
   }
 
-  &__contacts {
-    display: flex;
-    justify-content: space-between;
-  }
 }
